--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "sass": "^1.29.0"
   },
   "dependencies": {
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "varyd-utils": "^1.6.2"
   }
 }
